# alcor-control-agent

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  SCHEDULE.md  analyze.py  pcapout
.github/workflows/: acaci.yml  c-cpp.yml  codeql.yml
docs/: Zeta_environment_setup.md  Zeta_manual_construction.md  compute_communication.adoc  design.adoc  dhcp_programming.adoc  high_level_design.adoc  high_level_design_v2.adoc  major_components.adoc  manual_construction.md  mizar.adoc  mizar_communication.adoc  openflow_table_explain.adoc  ovs_communication.adoc  pending-items.adoc  table_of_content.adoc  zeta_integration.adoc
docs/images/: ovs-all.pptx
docs/zeta/: Zeta_environment_setup.md  Zeta_integration.adoc  Zeta_manual_construction.md
etc/k8s/: aca-cluster_init.sh  aca-daemonset.yaml  aca-node-init-daemonset.yaml
etc/k8s/images/: Dockerfile  aca-node-init.Dockerfile  aca.Dockerfile
etc/k8s/images/scripts/: aca-node-init.sh  aca-start.sh
include/: aca_arp_responder.h  aca_async_grpc_server.h  aca_async_grpc_subscribe_server.h  aca_comm_mgr.h  aca_config.h  aca_dataplane_OVS.h  aca_dataplane_mizar.h  aca_dataplane_ovs.h  aca_dhcp_programming_if.h  aca_dhcp_server.h  aca_dhcp_state_handler.h  aca_goal_state_handler.h  aca_grpc.h  aca_grpc_client.h  aca_grpc_subscribe.h  aca_log.h  aca_message_consumer.h  aca_message_producer.h  aca_message_pulsar_consumer.h  aca_message_pulsar_producer.h  aca_net_config.h  aca_net_programming_if.h  aca_net_state_handler.h  aca_oam_port_manager.h  aca_oam_server.h  aca_on_demand_engine.h  aca_ovs_config.h  aca_ovs_control.h  aca_ovs_l2_programmer.h  aca_ovs_l3_programmer.h  aca_ovs_programmer.h  aca_router_programmer.h  aca_security_group.h  aca_security_group_manager.h  aca_security_group_ovs.h  aca_sg_state_handler.h  aca_util.h  aca_vlan_manager.h  aca_zeta_oam_server.h  aca_zeta_programmer.h  (+9 more)
include/ctpl/: ctpl_stl.h
include/hashmap/: HashMap.h  HashNode.h
include/libfluid-base/: OFClient.hh  OFConnection.hh  OFServer.hh  OFServerSettings.hh  TLS.hh
include/libfluid-base/base/: BaseOFClient.hh  BaseOFConnection.hh  BaseOFServer.hh  EventLoop.hh  config.h  of.hh
include/libfluid-msg/: of10msg.hh  of13msg.hh
include/libfluid-msg/of10/: of10action.hh  of10common.hh  of10match.hh  openflow-10.h
include/libfluid-msg/of13/: of13action.hh  of13common.hh  of13instruction.hh  of13match.hh  of13meter.hh  openflow-13.h
include/libfluid-msg/ofcommon/: action.hh  common.hh  msg.hh  openflow-common.hh
include/libfluid-msg/util/: ethaddr.hh  ipaddr.hh  util.h
lib/: README.md
socket_client/: CMakeLists.txt  socket_client.c
src/: CMakeLists.txt  README.md  aca_main.cpp  netwagent.cpp  test_main.cpp
src/comm/: README.md  aca_async_grpc_server.cpp  aca_comm_mgr.cpp  aca_grpc.cpp  aca_grpc_client.cpp  aca_grpc_subscribe.cpp  aca_message_consumer.cpp  aca_message_producer.cpp  aca_message_pulsar_consumer.cpp  aca_message_pulsar_producer.cpp  async_server.cpp  messageconsumer.cpp  messageproducer.cpp
src/dhcp/: aca_dhcp_server.cpp  aca_dhcp_state_handler.cpp
src/dp_abstraction/: aca_dataplane_OVS.cpp  aca_dataplane_mizar.cpp  aca_dataplane_ovs.cpp  aca_goal_state_handler.cpp  aca_net_state_handler.cpp
src/grpc/: CMakeLists.txt
src/mizar_rpc/: CMakeLists.txt
src/net_config/: aca_net_config.cpp
src/on_demand/: aca_on_demand_engine.cpp
src/ovs/: aca_arp_responder.cpp  aca_ovs_config.cpp  aca_ovs_control.cpp  aca_ovs_l2_programmer.cpp  aca_ovs_l3_programmer.cpp  aca_ovs_programmer.cpp  aca_router_programmer.cpp  aca_vlan_manager.cpp  of_controller.cpp  of_message.cpp  ovs_control.cpp
src/ovs/libfluid-base/: OFClient.cc  OFConnection.cc  OFServer.cc  OFServerSettings.cc  TLS.cc
src/ovs/libfluid-base/base/: BaseOFClient.cc  BaseOFConnection.cc  BaseOFServer.cc  EventLoop.cc
src/ovs/libfluid-msg/: of10msg.cc  of13msg.cc
src/ovs/libfluid-msg/of10/: of10action.cc  of10common.cc  of10match.cc
src/ovs/libfluid-msg/of13/: of13action.cc  of13common.cc  of13instruction.cc  of13match.cc  of13meter.cc
src/ovs/libfluid-msg/ofcommon/: action.cc  common.cc  msg.cc
src/ovs/libfluid-msg/util/: ethaddr.cc  ipaddr.cc
src/proto3/: CMakeLists.txt  aca_interface.proto
src/sg/: aca_security_group.cpp  aca_security_group_manager.cpp  aca_security_group_ovs.cpp  aca_sg_state_handler.cpp
src/transit_rpc/: CMakeLists.txt
src/zeta/: aca_oam_port_manager.cpp  aca_oam_server.cpp  aca_zeta_oam_server.cpp  aca_zeta_programming.cpp  aca_zeta_state_handler.cpp
test/: CMakeLists.txt  README.md
test/aca-sg-test/: pom.xml
test/aca-sg-test/src/main/java/com/futurewei/aca/securitygroup/: SecurityGroupTest.java
test/e2e_tests/: aca_droplet.py  test  test_aca_mizar.py
test/func_tests/: aca_func_tests.cpp  gs_tests.cpp
test/gtest/: aca_test_arp.cpp  aca_test_dhcp.cpp  aca_test_main.cpp  aca_test_mq.cpp  aca_test_net_config.cpp  aca_test_oam.cpp  aca_test_on_demand.cpp  aca_test_openflow.cpp  aca_test_ovs_l2.cpp  aca_test_ovs_l3.cpp  aca_test_ovs_util.cpp  aca_test_zeta_programming.cpp  aca_tests.cpp  aca_tests_ovs_control.cpp
test/travis_test/: build_2_container.sh  test_aca_2_ports.py
test/travis_test/common/: __init__.py  node.py
test/zeta-aca-test_controllerScript/: README.md  run.py  run_sdn.py
test/zeta-aca-test_controllerScript/data/: zeta_data.json  zeta_data_sdn.json
